--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
     "seed": "node src/db/loadSeeds.js"
   },
   "keywords": [],
@@ -15,9 +15,13 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "js": "^0.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.23",
     "nodemon": "^2.0.4",
     "validator": "^13.1.1"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   }
 }
